Bugfix for mobile extra small devices Padding in forecast-list was too big so the icon would float underneath

--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -29,6 +29,10 @@
         & + .forecast {
             border-top: 1px solid;
         }
+
+        @media (max-width: $screen-xxs) {
+            padding: .25em;
+        }
     }
 }
 .container-weekday-weather {
