--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-gold--transparent: transparentize($color-gold, .5);
 $color-orange: orange;
 $color-orange--transparent: transparentize($color-orange, .925);
 
+$screen-xxs: 396px;
 $screen-xs: 480px;
 $screen-sm: 768px;
 $screen-md: 992px;
